services page + contact form fixes

--- a/services.html
+++ b/services.html
@@ -37,6 +37,106 @@
         </div>
     </header>
 
+    <section class="main-services">
+        <div class="container">
+            <div class="services-wrapper">
+                <h1 class="h1-title">OUR SERVICES</h1>
+                <p class="subtitle">Whether you are launching or expanding your business, the LenGreo team will become your best friend. Take a look at the range of marketing and sales services we can offer your brand as a full-service digital marketing agency. </p>
+                <div class="img-wrapper">
+                    <img src="./assets/img/services-img.png" alt="services">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="strategy">
+        <div class="container">
+            <div class="wrapper">
+                <div class="item">
+                    <div class="content">
+                        <h2 class="section-title">Strategy development</h2>
+                        <h5 class="title">Move in the right direction.</h5>
+                        <p class="text">Launching a business without a proper marketing strategy is like building LEGO without instruction. Eventually, you will get something, but it won’t be what you expected. Our team will outline the entire customer journey and help you define the most beneficial marketing channels and tactics to maximize the results of your marketing initiatives.</p>    
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-1.png" alt="service-img">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-2.png" alt="service-img">
+                    </div>
+                    <div class="content">
+                        <h2 class="section-title">SMM</h2>
+                        <h5 class="title">Get social media working for you.</h5>
+                        <p class="text">We know all about social media platforms, whether that’s LinkedIn, Facebook, Instagram, or TikTok. Our team will help you balance between them and find an authentic way to promote your brand.  </p>    
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <h2 class="section-title">Content Marketing</h2>
+                        <h5 class="title">Show them what you got!</h5>
+                        <p class="text">Social Media and Blogs packed with value are mandatory to prove to your audience that you care. Your content is what your customers see first, so it's your chance to make them love your brand. LenGreo team takes care of your and does it rightly.</p>    
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-3.png" alt="service-img">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-4.png" alt="service-img">
+                    </div>
+                    <div class="content">
+                        <h2 class="section-title">Paid Ads</h2>
+                        <h5 class="title">Let's make it sell!</h5>
+                        <p class="text">Is Paid Ads the silver bullet that will make your business blossom? No! But, when you do it correctly, it is. So before throwing money on the screen, we'll ensure that your offer is ready and the customers' experience will be top-notch. Then we thoroughly work on the target, test, and optimize the Ad so it pays you off.</p>    
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <h2 class="section-title">Influencer Marketing</h2>
+                        <h5 class="title">Get them on your side!</h5>
+                        <p class="text">Working with a warmed-up audience that's ready to buy makes lots of sense, and that is what the right influencer can provide. Our team will run end-to-end influencer marketing campaigns, from shortlisting to ensuring this activity reaches your KPIs, and you're getting new customers.</p>    
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-5.png" alt="service-img">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-6.png" alt="service-img">
+                    </div>
+                    <div class="content">
+                        <h2 class="section-title">Sales Process</h2>
+                        <h5 class="title">Get more clients.</h5>
+                        <p class="text">Let us become a bridge between your business and customers. We know the right way to convert your leads into happy and loyal customers.</p>    
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <h2 class="section-title">Lead Generation </h2>
+                        <h5 class="title">Speak to those who matter.</h5>
+                        <p class="text">We know where and how to find your potential client. Let’s hit right on the nail and separate your offer and emails from dozens of others. 
+                            We work with you to structure and implement a lead generation strategy and ensure a range of qualified meetings and sales calls for you to take forward and convert into new business opportunities. </p>    
+                    </div>
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-7.png" alt="service-img">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img-wrapper">
+                        <img src="./assets/img/service-8.png" alt="service-img">
+                    </div>
+                    <div class="content">
+                        <h2 class="section-title">Design</h2>
+                        <h5 class="title">Your users will love your brand.</h5>
+                        <p class="text">Our team is experienced in all facets of design, including brand identity, custom illustrations, animation, and web design. Attract a larger audience and enhance customer engagement with the design that matters.</p>    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     
     <section class="banner">
