--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,18 @@
                 <div class="cases-wrapper">
                     <div class="item">
                         <div class="img-wrapper">
-                            <img src="./assets/img/portfolio1.svg" alt="portfolio">
+                            <!-- <img src="./assets/img/portfolio1.svg" alt="portfolio"> -->
+                            <svg width="100" height="128" viewBox="0 0 100 128" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="49.826" cy="49.826" r="49.326" fill="#ABE231" stroke="#ABE231"/>
+                                <circle cx="49.826" cy="54.3221" r="48.826" stroke="#ABE231" stroke-width="2"/>
+                                <circle cx="49.826" cy="59.1698" r="48.826" stroke="#ABE231" stroke-width="2"/>
+                                <circle cx="49.826" cy="63.6659" r="48.826" stroke="#ABE231" stroke-width="2"/>
+                                <circle cx="49.826" cy="68.1639" r="48.826" stroke="#ABE231" stroke-width="2"/>
+                                <circle cx="49.826" cy="73.0096" r="48.826" stroke="#ABE231" stroke-width="2"/>
+                                <circle cx="49.826" cy="77.5077" r="48.826" stroke="#ABE231" stroke-width="2"/>
+                                <path d="M48.245 25C57.22 33.56 65.95 42.405 75 50.87V51.035C67.735 58.08 60.435 65.095 53.23 72.21C51.555 73.685 50.155 75.54 48.26 76.72C48.28 76.79 48.31 76.93 48.33 77H48.16C48.175 76.93 48.205 76.79 48.225 76.72C47.025 75.97 46.09 74.895 45.035 73.97C50.285 68.47 54.27 61.38 54.495 53.625C44.335 53.695 34.15 53.485 24 53.73V48.375C34.125 48.365 44.245 48.39 54.37 48.36L54.735 48.225C54.585 47.3 54.345 46.39 54.275 45.45C53.28 38.795 49.755 32.765 45.06 28.035C46.14 27.045 47.23 26.06 48.245 25Z" fill="#050505"/>
+                                </svg>
+                                                               
                         </div>
                         <div class="content">
                             <h4 class="title">CXDojo</h4>
@@ -72,7 +83,17 @@
                     </div>
                     <div class="item">
                         <div class="img-wrapper">
-                            <img src="./assets/img/portfolio2.svg" alt="portfolio">
+                            <!-- <img src="./assets/img/portfolio2.svg" alt="portfolio"> -->
+                            <svg width="100" height="128" viewBox="0 0 100 128" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="50.0656" cy="49.9347" r="48.9347" fill="#08080A" stroke="#08080A" stroke-width="2"/>
+                                <circle cx="50.0656" cy="54.4425" r="48.9347" stroke="#08080A" stroke-width="2"/>
+                                <circle cx="50.0656" cy="59.298" r="48.9347" stroke="#08080A" stroke-width="2"/>
+                                <circle cx="50.0656" cy="63.8058" r="48.9347" stroke="#08080A" stroke-width="2"/>
+                                <circle cx="50.0656" cy="68.3136" r="48.9347" stroke="#08080A" stroke-width="2"/>
+                                <circle cx="50.0656" cy="73.1691" r="48.9347" stroke="#08080A" stroke-width="2"/>
+                                <circle cx="50.0656" cy="77.6769" r="48.9347" stroke="#08080A" stroke-width="2"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M51.3651 30.1569C39.0881 30.1569 29.1357 40.1602 29.1357 52.5C29.1357 64.8398 39.0881 74.8431 51.3651 74.8431C63.642 74.8431 73.5944 64.8398 73.5944 52.5C73.5944 49.6053 73.0478 46.8439 72.0545 44.3109C71.6357 43.2429 72.1576 42.036 73.2201 41.6151C74.2826 41.1941 75.4834 41.7187 75.9021 42.7866C77.0827 45.7971 77.7301 49.075 77.7301 52.5C77.7301 67.1355 65.9261 79 51.3651 79C36.804 79 25 67.1355 25 52.5C25 37.8645 36.804 26 51.3651 26C57.6982 26 62.7553 27.4698 67.4301 31.4245C68.3038 32.1637 68.416 33.4749 67.6806 34.3531C66.9451 35.2313 65.6407 35.344 64.7669 34.6049C60.9901 31.4097 56.9434 30.1569 51.3651 30.1569ZM76.9838 28.5799C77.967 29.1639 78.2931 30.4384 77.7121 31.4266L59.6545 62.142C59.5495 62.3206 59.4221 62.4776 59.2779 62.6116C59.1629 62.7234 59.0331 62.8235 58.8892 62.9088C57.9055 63.4919 56.6377 63.163 56.0576 62.1743L46.2683 45.4901C45.6882 44.5014 46.0154 43.2272 46.9991 42.644C47.9828 42.0609 49.2506 42.3898 49.8307 43.3785L57.8483 57.0432L74.1516 29.3119C74.7325 28.3237 76.0006 27.9959 76.9838 28.5799ZM34.075 43.1637C35.0587 42.5805 36.3265 42.9094 36.9066 43.8981L46.6959 60.5823C47.276 61.571 46.9489 62.8453 45.9652 63.4284C44.9814 64.0115 43.7137 63.6826 43.1336 62.6939L33.3443 46.0098C32.7642 45.021 33.0913 43.7468 34.075 43.1637Z" fill="#ACE231"/>
+                                </svg>
                         </div>
                         <div class="content">
                             <h4 class="title">Wealax</h4>
