--- a/cases.html
+++ b/cases.html
@@ -63,9 +63,9 @@
 
     <section class="introduction">
         <div class="container">
-            <h2 class="cases-title">Introduction</h2>
             <div class="wrapper">
                 <div class="content">
+                    <h2 class="cases-title">Introduction</h2>
                     <div class="item">
                         <span>Client:</span>Wealax is Web & Blockchain Development Company    
                     </div>
@@ -90,12 +90,12 @@
 
     <section class="client-review">
         <div class="container">
-            <h2 class="cases-title client-review_title">Client’s review</h2>
             <div class="wrapper">
                 <div class="img-wrapper">
                     <img src="./assets/img/client-review-img.png" alt="client-review">
                 </div>
                 <div class="content">
+                    <h2 class="cases-title client-review_title">Client’s review</h2>
                     <div class="quote">
                         Hiring LenGreo was the right decision, as they are very systematic, purposeful,  and diligent with what they're doing.  They knew what they were talking about, and the results speak for themselves. ...
                     </div>
@@ -121,12 +121,12 @@
 
     <section class="challenge">
         <div class="container">
-            <h2 class="cases-title challenge-title">Challenge</h2>
             <div class="wrapper">
                 <div class="img-wrapper">
                     <img src="./assets/img/challenge.png" alt="challenge">
                 </div>
                 <div class="content">
+                   <h2 class="cases-title challenge-title">Challenge</h2>
                     <div class="item">
                         When LenGreo joined Wealax, their business was already operating, but the number of projects was insufficient to grow the team and provide enough workload for the in-house crew.
                     </div>
@@ -135,6 +135,73 @@
                     </div>
                     <div class="item">
                         Therefore, we had to focus on understanding who was buying persona and why our offer would convert them into customers. 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="solution">
+        <div class="container">
+            <div class="wrapper">
+                <ul class="list">
+                    <h2 class="cases-title">Solution</h2>
+                    <li class="item">
+                        Conducted discovery sessions and analyzed the project and our next steps.
+                    </li>
+                    <li class="item">
+                        Used our out of the box solution to describe the ICP and the main benefits of Wealax to integrate into strategy.
+                    </li>
+                    <li class="item">
+                        Created a neat and clear offering to broadcast a consultative approach to enhance the company's CX and boost sales.
+                    </li>
+                    <li class="item">
+                        Shortlisted platforms that could provide us with the desired leads, A/B tested, measured the conversion rate and analyzed leads in the funnel. 
+                    </li>
+                    <li class="item">
+                        Defined the template for a business review that BDRs can make before the first touch. Our leads get personalized, high-level proposals that significantly boost our conversion and close rates.
+                    </li>
+                    <li class="item">
+                        Developed the reference model to receive more new clients from the current customers and partners and increase the retention rate on win-win terms.
+                    </li>
+                    <li class="item">
+                        Continuously get new clients with the sales team and utilize targeted ad campaigns with optimized offers and audiences, reducing the lead costs the business owner had before. 
+                    </li>
+                </ul>
+                <div class="img-wrapper">
+                    <img src="./assets/img/solution-img.png" alt="solution-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="results">
+        <div class="container">
+            <div class="wrapper">
+                <div class="img-wrapper">
+                    <img src="./assets/img/result.png" alt="result-img">
+                </div>
+                <div class="content">
+                    <h2 class="cases-title">Results</h2>
+                    <ul class="list">
+                        <li class="item">
+                            Defined the buying persona and formed USP
+                        </li>
+                        <li class="item">
+                            Developed the comprehensive sales strategy
+                        </li>
+                        <li class="item">
+                            Reduced the client's acquisition cost by 37%
+                        </li>
+                        <li class="item">
+                            Grown Wealax's annual revenue by 128%
+                        </li>
+                        <li class="item">
+                            Developed the results-providing reference model
+                        </li>
+                    </ul>
+                    <div class="img-wrapper-graphic">
+                        <img src="./assets/img/cases-graphic.png" alt="graphic">
                     </div>
                 </div>
             </div>
