--- a/portfolio.html
+++ b/portfolio.html
@@ -199,6 +199,14 @@
                 $('.select-menu .item').removeClass('active-item');
                 $(this).addClass('active-item');
             })
+            $(window).scroll(function() {
+                console.log(window.pageYOffset);
+                if (window.pageYOffset > 50) {
+                    $('.header').css('position', 'fixed')
+                } else {
+                    $('.header').css('position', 'relative')
+                }
+            })
         })
         
     </script>
