--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LenGreo - About</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/animations.css">
     <link href="http://fonts.cdnfonts.com/css/clash-display" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/work-sans" rel="stylesheet">
 </head>
